fixed input border-radius on ios fixed snackbar position on mobile

--- a/src/assets/scss/setup/_mixins.scss
+++ b/src/assets/scss/setup/_mixins.scss
@@ -95,6 +95,7 @@
         background: transparent;
         border: none;
         border-bottom: 1px solid variables.$color-text-field-inactive;
+        border-radius: 0;
         width: 100%;
         height: 2em;
         margin: 0;
